--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,7 @@
                     <i class="fas fa-qrcode"></i>
                 </div>
                 <h1 class="header-title">Free QR Code Generator</h1>
-                <p class="header-subtitle">Create beautiful QR codes instantly</p>
+                <p class="header-subtitle">Create beautiful QR codes instantly - No server required!</p>
             </div>
             
             <div class="card-body">
