--- a/public/index.html
+++ b/public/index.html
@@ -307,7 +307,7 @@
                             <i class="fas fa-download"></i>
                             Download QR Code
                         </button>
-                        <button class="new-qr-btn" id="newQrBtn">
+                        <button class="new-qr-btn mt-2" id="newQrBtn">
                             <i class="fas fa-plus"></i>
                             Create New
                         </button>
